[package]
name = "auther-lib"
description = "a password manager lib"

version = "2.0.0"
edition = "2021"

license = "MIT"

[dependencies]
rand_core = "0.6"
rand_hc = "0.3"
sha2 = "0.10"

serde = { version = "1.0", features = ["derive"], optional = true }
toml = { version = "0.7", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:toml"]